# GAMES101_homework

./: README.md
Assignment0/: main.cpp
Assignment1/: main.cpp
Assignment1/code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment1/code/main.dSYM/Contents/Resources/DWARF/: main
Assignment1/include/: rasterizer.hpp
Assignment1/src/: rasterizer.cpp
Assignment2/: CMakeLists.txt  main.cpp
Assignment2/include/: Triangle.hpp  rasterizer.hpp
Assignment2/src/: rasterizer.cpp
Assignment3/: CMakeLists.txt  main.cpp
Assignment3/src/: rasterizer.cpp
Assignment4/: main.cpp
Assignment5/: CMakeLists.txt  main.cpp
Assignment5/include/: Triangle.hpp
Assignment5/src/: Renderer.cpp
Assignment6/: CMakeLists.txt  main.cpp
Assignment6/include/: Bounds3.hpp  Scene.hpp  Triangle.hpp
Assignment6/src/: BVH.cpp  Renderer.cpp  Scene.cpp
Assignment7/: CMakeLists.txt  main.cpp
Assignment7/include/: Bounds3.hpp  Material.hpp  Sphere.hpp  Triangle.hpp
Assignment7/src/: BVH.cpp  Scene.cpp
Assignment8/src/: rope.cpp
pa0/: CMakeLists.txt  main
pa0/main.dSYM/Contents/Resources/DWARF/: main
